refactor: Update color scheme and animations
This commit introduces a refactor of the application's color scheme and animations to improve visual appeal and consistency. Key changes include:

- **New Color Palette:** Replaced generic color names with more descriptive ones like `primary`, `secondary`, `dark-text`, and `light-bg`.
- **Animation Tweaks:** Adjusted `fade-in-up` animation duration and transform for a more polished entrance effect. The `glow` animation has also been refined to use the new primary and secondary colors.
- **Component Styling:** Updated various components (`App`, `Header`, `Hero`, `CountdownSection`, `CourseBenefits`) to utilize the new color palette and subtle visual enhancements.
- **Hero Image Update:** Replaced placeholder images with more relevant ones.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
               'poppins': ['Poppins', 'sans-serif'],
             },
             colors: {
-              'electric-blue': '#007BFF',
-              'deep-gray': '#333333',
-              'gold-accent': '#FFD700',
+              'primary': '#0052FF',
+              'primary-dark': '#003BBD',
+              'secondary': '#FFC107',
+              'dark-text': '#1A202C',
+              'light-text': '#4A5568',
+              'light-bg': '#F7FAFC',
+              'border-color': '#E2E8F0',
             },
             animation: {
               'gradient-x': 'gradient-x 10s ease infinite',
               'glow': 'glow 2s ease-in-out infinite alternate',
-              'fade-in-up': 'fade-in-up 0.8s ease-out',
+              'fade-in-up': 'fade-in-up 1s cubic-bezier(0.215, 0.610, 0.355, 1.000)',
             },
             keyframes: {
               'gradient-x': {
@@ -39,20 +43,20 @@
               },
               'glow': {
                 'from': {
-                  'box-shadow': '0 0 5px #FFD700, 0 0 10px #FFD700, 0 0 15px #007BFF',
+                  'box-shadow': '0 0 8px #0052FF, 0 0 12px #0052FF',
                 },
                 'to': {
-                  'box-shadow': '0 0 10px #007BFF, 0 0 15px #007BFF, 0 0 20px #FFD700',
+                  'box-shadow': '0 0 12px #0052FF, 0 0 18px #FFC107',
                 },
               },
               'fade-in-up': {
                 '0%': {
                   opacity: '0',
-                  transform: 'translateY(20px)'
+                  transform: 'translateY(30px) scale(0.98)'
                 },
                 '100%': {
                   opacity: '1',
-                  transform: 'translateY(0)'
+                  transform: 'translateY(0) scale(1)'
                 },
               },
             }
@@ -70,7 +74,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-50 font-poppins">
+  <body class="bg-light-bg text-dark-text font-poppins">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
